# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.170 2005/01/31 13:46:59 wolf31o2 Exp $

  31 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh:
  Updated to attempt to start 5 interfaces, rather than 4. You can blame
  gustavoz and his 5 interface Xeon for this.

  29 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/grp/grp.sh, targets/livecd-stage1/livecd-stage1.sh:
  Added a conditional before killing gconfd-2. This is also going to be
  catalyst 1.1.5, so let's hope we don't find any more bugs, at least for this
  release.

  29 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/grp/grp-preclean-chroot.sh, targets/grp/grp.sh,
  targets/livecd-stage1/livecd-stage1-preclean-chroot.sh:
  Moved killall -9 gconfd-2 to execute outside chroot.

  29 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/x86-help.msg:
  Modified x86-help.msg to remove agpgart line, add noload= line, and replace
  tabs with spaces.

  29 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/x86-archscript.sh:
  Removed acpi from x86-archscript.sh as it breaks acpi calls on the command
  line.

  29 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  Version 1.1.4

  28 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage1/livecd-stage1.sh:
  Added killall for gconfd-2 back into livecd-stage1.sh

  28 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/alpha-archscript.sh:
  Alpha fixes for multiple kernels..

  28 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/kmerge.sh:
  Changed kmerge.sh from --devfs to --no-udev as --devfs doesn't exist.

  28 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/hppa-archscript.sh, livecd/runscript/sparc-archscript.sh,