@@ -1,6 +1,10 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.170 2005/01/31 13:46:59 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.171 2005/02/04 16:46:42 wolf31o2 Exp $
+
+  04 Feb 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  modules/snapshot_target.py:
+  Added /local/ to snapshot exclusion.
 
   31 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   livecd/runscript-support/livecdfs-update.sh:
